--- a/index.html
+++ b/index.html
@@ -122,16 +122,19 @@
       text-decoration: none;
     }
 
+    /* CTA (Termin buchen) – use the warm yellow accent colour for better contrast */
     .nav-cta {
-      background: var(--teal);
-      color: var(--white) !important;
+      background: var(--yellow);
+      color: var(--text) !important;
       font-weight: 600;
       border-radius: 999px;
-      padding: 0.35rem 0.9rem;
-      box-shadow: 0 8px 20px rgba(22, 128, 123, 0.35);
+      padding: 0.45rem 1rem;
+      box-shadow: 0 8px 20px rgba(247, 183, 49, 0.35);
       flex: 0 0 auto;
     }
-    .nav-cta:hover { background: #115b57; }
+    .nav-cta:hover {
+      background: #e5a92a;
+    }
 
     /* Mobile nav toggle */
     .nav-toggle {
@@ -471,27 +474,46 @@
     }
 
     @media (max-width: 720px) {
+      /* Adjust padding on small screens */
       .nav {
         padding-inline: 1rem;
       }
       .logo-img { height: 38px; }
 
+      /* Mobile navigation: stack links vertically, full‑width dropdown */
       .nav-links {
         display: none;
-        flex-wrap: wrap;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        flex-direction: column;
+        align-items: flex-start;
+        background: var(--bg);
+        border-top: 1px solid rgba(203, 213, 225, 0.7);
+        padding: 0.6rem 1rem 0.8rem;
+        gap: 0.6rem;
+        z-index: 40;
+      }
+      .nav-links a {
+        padding: 0.5rem 0;
         width: 100%;
-        margin-top: 0.5rem;
       }
       .nav-links.open {
         display: flex;
       }
+
+      /* CTA in mobile menu: takes full width */
       .nav-cta {
-        margin-left: auto;
+        margin: 0;
       }
+
+      /* Show toggle button on small screens */
       .nav-toggle {
         display: flex;
       }
 
+      /* Adjust page padding */
       .page {
         padding-inline: 1rem;
       }
@@ -506,12 +528,8 @@
   <div class="nav">
     <div class="nav-left">
       <img src="logo-kinderarztpraxis-krause.png"
-           alt="Logo Kinderarztpraxis Dr. Susann Krause"
+           alt="Kinderarztpraxis Dr. Susann Krause Logo"
            class="logo-img">
-      <div class="logo-text">
-        <span>kinderarztpraxis</span>
-        <span>dr. susann krause</span>
-      </div>
     </div>
 
     <button class="nav-toggle" type="button" aria-label="Menü öffnen oder schließen">
