Set urgent admin password to L56

--- a/urgent-admin.html
+++ b/urgent-admin.html
@@ -182,11 +182,7 @@
 <body>
 <header>
   <a href="index.html" class="logo">
-    <img src="logo-kinderarztpraxis-krause.png" alt="Logo Kinderarztpraxis Dr. Susann Krause">
-    <div class="logo-text">
-      <span>kinderarztpraxis</span><br>
-      <span>dr. susann krause</span>
-    </div>
+    <img src="logo-kinderarztpraxis-krause.png" alt="Kinderarztpraxis Dr. Susann Krause Logo">
   </a>
 </header>
 
@@ -281,7 +277,7 @@
 <script>
   document.getElementById("year").textContent = new Date().getFullYear();
 
-  const PASSWORD = "praxis2024"; // <- hier einfaches internes Passwort anpassen
+  const PASSWORD = "L56"; // Internes Praxis-Passwort
 
   const passwordView = document.getElementById("password-view");
   const adminView = document.getElementById("admin-view");
