Update message in urgent-admin.html

--- a/urgent-admin.html
+++ b/urgent-admin.html
@@ -222,7 +222,7 @@
 
       <div class="field">
         <label for="field-message">Hinweistext</label>
-        <textarea id="field-message">Am Freitag, 15. November bleibt die Praxis nachmittags geschlossen. In dringenden Notfällen wenden Sie sich bitte an den kassenärztlichen Bereitschaftsdienst 116 117.</textarea>
+        <textarea id="field-message">Jan is the coolest. Becky thinks he is sexy too</textarea>
       </div>
 
       <div class="field">
